paperspigot: Fix config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,27 @@
 version: '3.7'
 
 services:
-  minecraft:
+  paperspigot:
     build: ./images/paperspigot
-    container_name: minecraft
+    container_name: paperspigot
     stdin_open: true
     tty: true
     restart: always
-    networks:
-      - paperspigot
     ports:
-      - 25565:25565
+      - 54920:25565
     volumes:
-      - paperspigot-config:/op./paperspigot/config
-      - paperspigot-worlds:/op./paperspigot/worlds
-      - paperspigot-plugins:/op./paperspigot/plugins
-      - paperspigot-data:/op./paperspigot/data
-      - paperspigot-logs:/op./paperspigot/logs
-
-volumes:
-  paperspigot-config:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ./paperspigot/config
-  paperspigot-worlds:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ./paperspigot/worlds
-  paperspigot-plugins:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ./paperspigot/plugins
-  paperspigot-data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ./paperspigot/data
-  paperspigot-logs:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ./paperspigot/logs
-
-networks:
-  paperspigot: {}
+      - type: bind
+        source: ./paperspigot/config
+        target: /opt/paperspigot/config
+      - type: bind
+        source: ./paperspigot/worlds
+        target: /opt/paperspigot/worlds
+      - type: bind
+        source: ./paperspigot/plugins
+        target: /opt/paperspigot/plugins
+      - type: bind
+        source: ./paperspigot/data
+        target: /opt/paperspigot/data
+      - type: bind
+        source: ./paperspigot/logs
+        target: /opt/paperspigot/logs
