--- a/paperspigot/config/server.properties
+++ b/paperspigot/config/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Feb 13 18:48:37 EST 2021
+#Fri Mar 19 02:54:55 UTC 2021
 enable-jmx-monitoring=false
 level-seed=
 rcon.port=25575
@@ -15,8 +15,8 @@ generate-structures=true
 difficulty=easy
 network-compression-threshold=256
 max-tick-time=60000
-max-players=20
 use-native-transport=true
+max-players=20
 online-mode=true
 enable-status=true
 allow-flight=false
