gentoo/portage: Update configs and use ccache

--- a/gentoo/portage/make.conf
+++ b/gentoo/portage/make.conf
@@ -13,6 +13,10 @@ FFLAGS="${COMMON_FLAGS}"
 # Run a maximum of 2 emerge jobs.
 # EMERGE_DEFAULT_OPTS="--jobs 2"
 
+# Enable ccache
+FEATURES="ccache"
+CCACHE_DIR="/var/cache/ccache"
+
 # Ensure EFI support for grub.
 GRUB_PLATFORMS="efi-64"
 
