paperspigot: Update configs

--- a/paperspigot/config/paper.yml
+++ b/paperspigot/config/paper.yml
@@ -59,8 +59,8 @@ settings:
   async-chunks:
     threads: -1
 messages:
-  no-permission: '&cI''m sorry, but you do not have permission to perform this command.
-    Please contact the server administrators if you believe that this is in error.'
+  no-permission: '&cI''m sorry, but you do not have permission to perform this command.  Please
+    contact the server administrators if you believe that this is in error.'
   kick:
     authentication-servers-down: ''
     connection-throttle: Connection throttled! Please wait before reconnecting.
