--- a/paperspigot/config/server.properties
+++ b/paperspigot/config/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Mar 19 02:54:55 UTC 2021
+#Fri Mar 19 16:56:36 UTC 2021
 enable-jmx-monitoring=false
 level-seed=
 rcon.port=25575
@@ -8,15 +8,15 @@ gamemode=survival
 enable-query=false
 generator-settings=
 level-name=world
-motd=A Minecraft Server
+motd=A Server
 query.port=25565
 pvp=true
 generate-structures=true
 difficulty=easy
 network-compression-threshold=256
 max-tick-time=60000
-use-native-transport=true
 max-players=20
+use-native-transport=true
 online-mode=true
 enable-status=true
 allow-flight=false
@@ -38,7 +38,7 @@ debug=false
 force-gamemode=false
 rate-limit=0
 hardcore=false
-white-list=false
+white-list=true
 broadcast-console-to-ops=true
 spawn-npcs=true
 spawn-animals=true
@@ -47,7 +47,7 @@ function-permission-level=2
 level-type=default
 text-filtering-config=
 spawn-monsters=true
-enforce-whitelist=false
+enforce-whitelist=true
 spawn-protection=16
 resource-pack-sha1=
 max-world-size=29999984
