deluge: Add docker and proxy configs

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,8 +40,6 @@ http {
 
 	ignore_invalid_headers on;
 
-	index index.html;
-
 	server {
 		listen 54920;
 		server_name proxy;
@@ -59,6 +57,11 @@ http {
 
 			proxy_read_timeout      600s;
 			proxy_send_timeout      600s;
+		}
+		
+		location /deluge {
+			proxy_pass		http://127.0.0.1:8112/;
+			proxy_set_header	X-Deluge-Base "/deluge/";
 		}
 	}
 }
