--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,22 @@ services:
       - type: bind
         source: ./syncthing/sync
         target: /var/syncthing
+  deluge:
+    image: linuxserver/deluge
+    container_name: deluge
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/New_York
+    volumes:
+      - type: bind
+        source: ./deluge/config
+        target: /config
+      - type: bind
+        source: ./deluge/downloads
+        target: /downloads
   paperspigot:
     build: ./images/paperspigot
     container_name: paperspigot
@@ -17,7 +33,8 @@ services:
     tty: true
     restart: always
     ports:
-      - 54920:25565
+      - 55942:25565
+      - 8123:8123
     volumes:
       - type: bind
         source: ./paperspigot/config
