mympd: Add docker config

--- a/images/mpd/mpd.conf
+++ b/images/mpd/mpd.conf
@@ -1,11 +1,11 @@
-music_directory     "{{LIBRARY}}"
-playlist_directory  "{{PLAYLISTS}}"
+music_directory     "/library"
+playlist_directory  "/playlists"
 
 db_file             "/var/lib/mpd/mpd.db"
 pid_file            "/var/run/mpd.pid"
-log_file            "/var/log/mpd.log"
+log_file            "/var/log/mpd/mpd.log"
 
-bind_to_address     "127.0.0.1"
+bind_to_address     "0.0.0.0"
 port                "6600"
 
 # password            "{{PASSWORD}}@read,add,control"
