--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,8 +60,6 @@ services:
       context: ./images/mpd
       args:
         PASSWORD: ${MPD_ICECAST_PASSWORD}
-        LIBRARY: /library
-        PLAYLISTS: /playlists
     container_name: mpd
     restart: unless-stopped
     depends_on:
@@ -74,12 +72,38 @@ services:
       - type: bind
         source: ./var/media/music
         target: /library
+        read_only: true
       - type: bind
         source: ./mpd/playlists
         target: /playlists
       - type: bind
         source: ./mpd/logs
-        target: /var/log
+        target: /var/log/mpd
+  mympd:
+    image: ghcr.io/jcorporation/mympd/mympd
+    container_name: mympd
+    depends_on:
+      - mpd
+    networks:
+      - music_stack
+    ports:
+      - "8080:80"
+    environment:
+      PUID: 1000
+      PGID: 1000
+      TZ: America/New_York
+      MPD_HOST: mpd
+    volumes:
+      - type: bind
+        source: ./mympd/mympd.conf
+        target: /etc/mympd.conf
+      - type: bind
+        source: ./var/media/music
+        target: /library
+        read_only: true
+      - type: bind
+        source: ./mpd/playlists
+        target: /playlists
   # ympd:
     # build:
       # context: ./images/ympd
