--- a/images/mpd/mpd.conf
+++ b/images/mpd/mpd.conf
@@ -33,3 +33,8 @@ audio_output {
     quality         "0"
     format          "44100:16:1"
 }
+
+audio_output {
+    type            "null"
+    name            "Fake Out"
+}
